# SmartHome

src/: SETUP.md  docker-compose.yml  start-all.ps1  start-all.sh
src/ai/agent_service/: agent_router.py  ai_client.py  main.py
src/ai/ai_service/: __init__.py  feature_engineering.py  predictor.py
src/hardware/f1_env_monitor/: BUILD.gn  env_monitor_example.c
src/hardware/f1_env_monitor/include/: adc_key.h  drv_beep.h  drv_light.h  drv_motor.h  env_control.h  env_convert.h  env_event.h  env_iot.h  env_monitor.h  iot_config.h  lcd_font.h  mpu6050.h  mq2.h  voice_ctrl.h  wifi_config.h
src/hardware/f1_env_monitor/src/: adc_key.c  drv_beep.c  drv_light.c  drv_motor.c  env_control.c  env_convert.c  env_event.c  env_iot.c  env_monitor_lcd.c  env_sensors.c  mpu6050.c  mq2.c  voice_ctrl.c  wifi_status.c
src/python/: .env.example  .gitignore  API.md  API对接总结.md  Dockerfile  README.md  app.py  credentials.csv  init_database.py  init_mysql.sql  query_all_tables.sql  recreate_table.sql  requirements.txt  simple_requirements.txt  start.sh  start_services.py  test_all_data_flows.py  test_smart_home.py
src/python/APP/: main.py  schemas.py
src/python/code/: test_huawei_sync.py  test_mqtt_subscribe.py
src/python/common/: ai_client.py  config.py  control_utils.py  data_quality.py  data_stats.py  data_validator.py  database.py  device_payloads.py  huawei_callback.py  iot_client.py  models.py  mqtt_client.py  redis_client.py  security.py  websocket_manager.py
src/web/: API_DOC(1).md  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/web/src/: App.vue  pages.json
(+86 files in other folders)
